<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.projects.bakota.justjava.MainActivity">

   <LinearLayout
       android:layout_width="match_parent"
       android:layout_height="match_parent"
       android:layout_marginLeft="16dp"
       android:orientation="vertical">
       <EditText
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:hint="@string/nom_edit"
           android:id="@+id/nom_edit_text"
           android:inputType="textPersonName"/>
       <TextView
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:layout_marginBottom="16dp"
           android:layout_marginTop="16dp"
           android:text="@string/option"
           android:textAllCaps="true" />
       <CheckBox
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:text="@string/mayo"
           android:textSize="16sp"
           android:id="@+id/mayo_check_box"
           android:paddingLeft="24dp"/>

       <CheckBox
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:text="@string/pain"
           android:textSize="16sp"
           android:id="@+id/pain_check_box"
           android:paddingLeft="24dp"/>

       <TextView
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:layout_marginBottom="16dp"
           android:layout_marginTop="16dp"
           android:text="Quantite"
           android:textAllCaps="true" />

       <LinearLayout
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:orientation="horizontal">
           <Button
               android:id="@+id/incremente_btn"
               android:layout_width="48dp"
               android:layout_height="48dp"
               android:onClick="incrementer"
               android:text="+"/>

           <TextView
               android:id="@+id/quantite_txt"
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:paddingLeft="8dp"
               android:paddingRight="8dp"
               android:text="2"
               android:textAllCaps="true"
               android:textColor="@android:color/black"
               android:textSize="16sp"
               />
           <Button
               android:id="@+id/decremente_btn"
               android:layout_width="48dp"
               android:layout_height="48dp"
               android:onClick="decrementer"
               android:text="-"/>

       </LinearLayout>

       <Button
           android:id="@+id/commander_btn"
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:layout_marginTop="16dp"
           android:onClick="passerCommande"
           android:text="@string/cmd_btn" />

   </LinearLayout>

</ScrollView>
